tasks do dia 28/07

--- a/src/app/pages/ncs/create-prop/steps/step1/ishikawa-diagram.component.html
+++ b/src/app/pages/ncs/create-prop/steps/step1/ishikawa-diagram.component.html
@@ -197,7 +197,7 @@
         'font-size': '25px'
       }"
       [readonly]="true"
-      [ngModel]="propService.ncProp.text_area_nc"
+      [ngModel]="propService.ncProp?.text_area_nc"
     >
       <ng-template pTemplate="header"> </ng-template>
     </p-editor>
