--- a/src/app/pages/ncs/about/proposal/proposal.component.css
+++ b/src/app/pages/ncs/about/proposal/proposal.component.css
@@ -69,3 +69,12 @@ h2 {
     font-size: 14px;
     
 }
+
+.selected-btn {
+    background-color: #00344D;
+    color: #fff;
+}
+.unselected-btn {
+    border-color: #00344D;
+    color:#00344D;
+}
