desabilita botão para gerar pdf

--- a/src/app/pages/ncs/about/header/header.component.html
+++ b/src/app/pages/ncs/about/header/header.component.html
@@ -20,7 +20,7 @@
                 {{'global.ncData'| translate}}
                 <i class="bi bi-file-earmark-text"></i>
             </button>-->
-            <button type="button" class="btn btn-dark mr-2" style="background-color: #00344D;" (click)="gerarPdf()">
+            <button type="button" class="btn btn-dark mr-2" style="background-color: #00344D;" (click)="gerarPdf()" disabled>
                 {{'about.export'| translate}}
                 <i class="bi bi-file-earmark-arrow-down" ></i>
             </button>
