--- a/src/app/pages/dashboards/dashboards.component.html
+++ b/src/app/pages/dashboards/dashboards.component.html
@@ -3,15 +3,15 @@
   style=""
   *ngIf="carregou()"
 >
-  <app-nc-receptor-emissor [size]="[getWidth(), 400]"></app-nc-receptor-emissor>
+ <!-- <app-nc-receptor-emissor [size]="[getWidth(), 400]"></app-nc-receptor-emissor>
   <app-nc-status [size]="[getWidth(), 400]"></app-nc-status>
   <app-nc-year [size]="[getWidth(), 400]"></app-nc-year>
   <app-nc-types [size]="[getWidth(), 400]"></app-nc-types>
   <app-nc-emissor [size]="[getWidth(), 400]"></app-nc-emissor>
   <app-nc-receptor [size]="[getWidth(), 400]"></app-nc-receptor>
-  <app-cost-sector [size]="[getWidth(), 400]"></app-cost-sector>
+  <app-cost-sector [size]="[getWidth(), 400]"></app-cost-sector> -->
   <app-nc-count [size]="[getWidth(), 400]"></app-nc-count>
-  <app-nc-actionplan [size]="[getWidth(), 400]"></app-nc-actionplan>
-  <app-nc-products [size]="[getWidth(), 400]"></app-nc-products>
-  <app-nc-sector-proposal [size]="[getWidth(), 400]"></app-nc-sector-proposal>
+  <!-- <app-nc-actionplan [size]="[getWidth(), 400]"></app-nc-actionplan>
+  <app-nc-products [size]="[getWidth(), 400]"></app-nc-products> 
+  <app-nc-sector-proposal [size]="[getWidth(), 400]"></app-nc-sector-proposal> -->
 </div>
