--- a/src/app/pages/ncs/about/closing/closing.component.css
+++ b/src/app/pages/ncs/about/closing/closing.component.css
@@ -98,3 +98,14 @@ h2 {
     display: flex;
     align-items: center;
 }
+:host ::ng-deep .removeHeader .ql-toolbar.ql-snow {
+    display: none;
+}
+.selected-btn {
+    background-color: #00344D;
+    color: #fff;
+}
+.unselected-btn {
+    border-color: #00344D;
+    color:#00344D;
+}
