--- a/src/app/pages/ncs/sgq-evaluation/steps/review-info-sgq/review-info-sgq.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/steps/review-info-sgq/review-info-sgq.component.html
@@ -47,7 +47,7 @@
       </div>
     </ng-template>
     <ng-template pTemplate="content">
-      <div class="card">
+      <div class="card" *ngIf="sgqServ.sgq.recurrence?.length>0">
         <p-table [value]="sgqServ.sgq.recurrence || []">
           <ng-template pTemplate="header">
             <tr>
@@ -115,6 +115,7 @@
           </ng-template>
         </p-table>
       </div>
+      <p class="text-center fs-5" *ngIf="sgqServ.sgq.recurrence?.length<=0">{{'sgq.noRecurrenceSelected'| translate}}</p>
     </ng-template>
   </p-accordionTab>
   <p-accordionTab [selected]="isAllOpen">
