--- a/src/app/pages/ncs/about/sgq-evaluation/sgq-evaluation.component.html
+++ b/src/app/pages/ncs/about/sgq-evaluation/sgq-evaluation.component.html
@@ -1,32 +1,3 @@
-<div *ngIf="!aboutSrv.nc?.sgqEvaluation">
-  <div class="d-flex flex-lg-row flex-column justify-content-between">
-    <div class="d-flex">
-      <div class="cabecalho">
-        <div class="d-flex align-items-center">
-          <h1 class="mr-3">{{ "about.sgqEval" | translate }}</h1>
-        </div>
-        <p>
-          {{ "about.sgqEvalComponent.subtitle" | translate }}
-        </p>
-      </div>
-    </div>
-  </div>
-
-  <div class="text-center">
-    <button
-      type="button"
-      class="btn btn-dark"
-      style="background-color: #00344d"
-      [disabled]="
-        !(aboutSrv.nc?.proposalSolution && aboutSrv.nc?.costs?.length > 0)
-      "
-      routerLink="../../sgq/{{ id }}"
-    >
-      {{ "about.sgqEvalComponent.createBtn" | translate }}
-      <i class="bi bi-file-earmark-medical"></i>
-    </button>
-  </div>
-</div>
 <div *ngIf="aboutSrv.nc?.sgqEvaluation">
   <div class="d-flex flex-lg-row flex-column justify-content-between">
     <div class="d-flex">
@@ -77,7 +48,7 @@
         </div>
       </ng-template>
       <ng-template pTemplate="content">
-        <div class="card">
+        <div class="card" *ngIf="aboutSrv.nc.sgqEvaluation.recurrence.length>0">
           <p-table [value]="aboutSrv.nc.sgqEvaluation.recurrence || []">
             <ng-template pTemplate="header">
               <tr>
@@ -147,6 +118,7 @@
             </ng-template>
           </p-table>
         </div>
+        <p class="text-center fs-4" *ngIf="aboutSrv.nc.sgqEvaluation.recurrence.length<=0">{{'sgq.noRecurrenceSelected'| translate}}</p>
       </ng-template>
     </p-accordionTab>
     <p-accordionTab [selected]="isAllOpen">
