--- a/src/app/pages/ncs/sgq-evaluation/steps/reoccurrence/reoccurrence.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/steps/reoccurrence/reoccurrence.component.html
@@ -13,7 +13,7 @@
 </div>
 
 <div class="card">
-  <p-table [value]="sgqServ.sgq.recurrence || []">
+  <p-table [value]="sgqServ.sgq.recurrence || []" >
     <ng-template pTemplate="header">
       <tr>
         <th>{{ "global.number" | translate }}</th>
@@ -80,6 +80,7 @@
       </tr>
     </ng-template>
   </p-table>
+  <p class="text-center fs-6 mt-2" *ngIf="sgqServ.sgq.recurrence?.length<=0">{{'sgq.noRecurrenceSelected'| translate}}</p>
 </div>
 
 <p-confirmDialog #cd [style]="{ width: '50vw' }">
