--- a/src/app/pages/ncs/about/view-nc/identify-nc/view-identify-n-c.component.html
+++ b/src/app/pages/ncs/about/view-nc/identify-nc/view-identify-n-c.component.html
@@ -5,7 +5,7 @@
       {{ "newNC.review.identification" | translate }}
     </h2>
     <div class="d-flex justify-content-between flex-column flex-lg-row">
-      <div class="contato-info d-flex flex-row">
+      <div class="contato-info-ident d-flex flex-row">
         <i class="bi bi-ticket-perforated mr-1"></i>
         <div>
           <span class="info-titulo">{{ "global.number" | translate }}</span>
@@ -13,7 +13,7 @@
           <span class="info-dados">{{ aboutSrvc.nc?.code || "" }}</span>
         </div>
       </div>
-      <div class="contato-info d-flex flex-row">
+      <div class="contato-info-ident d-flex flex-row">
         <i class="bi bi-calendar-week mr-1"></i>
         <div>
           <span class="info-titulo">{{
@@ -25,7 +25,7 @@
           </span>
         </div>
       </div>
-      <div class="contato-info d-flex flex-row">
+      <div class="contato-info-ident d-flex flex-row">
         <i class="bi bi-calendar-week mr-1"></i>
         <div>
           <span class="info-titulo">{{
@@ -34,6 +34,40 @@
           <br />
           <span class="info-dados">
             {{ formato_brasileiro(aboutSrvc.nc?.data_fechamento) }}
+          </span>
+        </div>
+      </div>
+    </div>
+    <div class="d-flex justify-content-between flex-column flex-lg-row mt-2">
+      <div class="contato-info-ident d-flex flex-row">
+        <i class="bi bi-file-text mr-1"></i>
+        <div>
+          <span class="info-titulo">{{ "newNC.step1.identifyNC.typeLabel" | translate }}</span>
+          <br />
+          <span class="info-dados">{{ aboutSrvc.nc?.tipos_nc_item || "" }}</span>
+        </div>
+      </div>
+      <div class="contato-info-ident d-flex flex-row">
+        <i class="bi bi-people mr-1"></i>
+        <div>
+          <span class="info-titulo">{{
+            "newNC.step1.identifyNC.sectorLabel" | translate
+          }}</span>
+          <br />
+          <span class="info-dados">
+            {{ aboutSrvc.nc?.tipos_local_item }}
+          </span>
+        </div>
+      </div>
+      <div class="contato-info-ident d-flex flex-row" *ngIf="haveSegment()">
+        <i class="bi bi-file-bar-graph mr-1"></i>
+        <div>
+          <span class="info-titulo">{{
+            "newNC.step1.identifyNC.segment" | translate
+          }}</span>
+          <br />
+          <span class="info-dados">
+            {{ aboutSrvc.nc?.tipos_auditoria_item }}
           </span>
         </div>
       </div>
