--- a/src/app/pages/ncs/create/steps/step4/revisar-info.component.html
+++ b/src/app/pages/ncs/create/steps/step4/revisar-info.component.html
@@ -74,6 +74,7 @@
       </div>
     </ng-template>
     <ng-template pTemplate="content">
+      <div class="d-flex flex-row justify-content-center radio-title">{{returnRadioValue()}}</div>
       <div class="div-ident-parceiro d-flex flex-column flex-lg-row mt-3">
         <div class="dados-parceiro razao-social item">
           <h2 class="mr-2">
