--- a/src/app/pages/ncs/about/view-nc/view-nc.component.css
+++ b/src/app/pages/ncs/about/view-nc/view-nc.component.css
@@ -10,6 +10,11 @@ h2 {
     color: black;
 }
 
+.radio-title{
+    font-size: x-large;
+    font-weight: 700;
+}
+
 .cabecalho p {
     font-size: 15px;
     color: gray;
